Update run.sh args